[gd_scene load_steps=23 format=3 uid="uid://if18q1gjqeef"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_xub1n"]
[ext_resource type="FontFile" uid="uid://c0v7apftvxddm" path="res://graphics/Tiny Swords/UI/Font/dpcomic.ttf" id="2_6uia3"]
[ext_resource type="Texture2D" uid="uid://dk3xnwcl8eg0h" path="res://graphics/Tiny Swords/UI/Buttons/Button_Blue_3Slides_Pressed.png" id="3_w7ncq"]
[ext_resource type="Texture2D" uid="uid://bv8070q4jrpcj" path="res://graphics/Tiny Swords/UI/Ribbons/Ribbon_Blue_3Slides.png" id="4_4p7td"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oscel"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_n4rou"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hova3"]
resource_name = "fade_in"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bcoju"]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wv54a"]
_data = {
"RESET": SubResource("Animation_n4rou"),
"fade_in": SubResource("Animation_hova3"),
"fade_out": SubResource("Animation_bcoju")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e6s8o"]
content_margin_bottom = 44.0
texture = ExtResource("4_4p7td")
texture_margin_left = 64.0
texture_margin_right = 64.0
expand_margin_left = 95.0
expand_margin_top = 25.0
expand_margin_right = 95.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7jy7a"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bpc7h"]
load_path = "res://.godot/imported/Button_Blue_3Slides.png-9e93ce65cdc1e27f131b5828c0c6fd60.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6fylw"]
content_margin_left = 5.0
content_margin_top = 17.0
content_margin_right = 5.0
content_margin_bottom = 28.0
texture = SubResource("CompressedTexture2D_bpc7h")
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 10.0
modulate_color = Color(0.775063, 0.775063, 0.775063, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_s5olk"]
load_path = "res://.godot/imported/Button_Blue_3Slides_Pressed.png-a6c43c683623d2c6e35f2aebb334a7f9.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2u55m"]
content_margin_left = 5.0
content_margin_top = 32.0
content_margin_right = 5.0
content_margin_bottom = 28.0
texture = SubResource("CompressedTexture2D_s5olk")
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 10.0
modulate_color = Color(0.775063, 0.775063, 0.775063, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vh101"]
load_path = "res://.godot/imported/Button_Blue_3Slides.png-9e93ce65cdc1e27f131b5828c0c6fd60.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qdm5g"]
content_margin_left = 5.0
content_margin_top = 17.0
content_margin_right = 5.0
content_margin_bottom = 28.0
texture = SubResource("CompressedTexture2D_vh101")
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g8503"]
content_margin_left = 5.0
content_margin_top = 32.0
content_margin_right = 5.0
content_margin_bottom = 38.0
texture = ExtResource("3_w7ncq")
modulate_color = Color(0.775063, 0.775063, 0.775063, 1)

[sub_resource type="Animation" id="Animation_fyjpk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_014fg"]
resource_name = "fade_in"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ckmmo"]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jthgi"]
_data = {
"RESET": SubResource("Animation_fyjpk"),
"fade_in": SubResource("Animation_014fg"),
"fade_out": SubResource("Animation_ckmmo")
}

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_xub1n")

[node name="Blackscreen" type="Panel" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 965.0
offset_top = -531.0
offset_right = 4028.0
offset_bottom = -380.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(-0.659576, 7.07196)
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_oscel")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Blackscreen"]
libraries = {
"": SubResource("AnimationLibrary_wv54a")
}

[node name="Buttons_VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -142.0
offset_right = 140.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Buttons_VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 14
theme_override_fonts/font = ExtResource("2_6uia3")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxTexture_e6s8o")
text = "Game Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="play_button" type="Button" parent="Buttons_VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_6uia3")
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_7jy7a")
theme_override_styles/hover = SubResource("StyleBoxTexture_6fylw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2u55m")
theme_override_styles/normal = SubResource("StyleBoxTexture_qdm5g")
keep_pressed_outside = true
text = "Play"

[node name="settings_button" type="Button" parent="Buttons_VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_6uia3")
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_7jy7a")
theme_override_styles/hover = SubResource("StyleBoxTexture_6fylw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_g8503")
theme_override_styles/normal = SubResource("StyleBoxTexture_qdm5g")
keep_pressed_outside = true
text = "Settings
"

[node name="exit_button" type="Button" parent="Buttons_VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_6uia3")
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_7jy7a")
theme_override_styles/hover = SubResource("StyleBoxTexture_6fylw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_g8503")
theme_override_styles/normal = SubResource("StyleBoxTexture_qdm5g")
keep_pressed_outside = true
text = "Exit
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons_VBoxContainer"]
libraries = {
"": SubResource("AnimationLibrary_jthgi")
}

[connection signal="pressed" from="Buttons_VBoxContainer/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons_VBoxContainer/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Buttons_VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
